RESOLVED FIXED 40200
"Fix" fast/dom/stripNullFromTextNodes.html in HTML5 parser
https://bugs.webkit.org/show_bug.cgi?id=40200
Summary "Fix" fast/dom/stripNullFromTextNodes.html in HTML5 parser
Adam Barth
Reported 2010-06-04 20:59:16 PDT
"Fix" fast/dom/stripNullFromTextNodes.html in HTML5 parser
Attachments
Patch (1.72 KB, patch)
2010-06-04 21:00 PDT, Adam Barth
no flags
original reduction (42 bytes, text/html)
2010-06-05 10:26 PDT, Alexey Proskuryakov
no flags
Adam Barth
Comment 1 2010-06-04 21:00:51 PDT
Eric Seidel (no email)
Comment 2 2010-06-04 22:08:19 PDT
Comment on attachment 57958 [details] Patch I guess we don't have any way to check in results for a test like this, eh? We could with the html5lib tests. Please consider adding a test with checked in results.
Alexey Proskuryakov
Comment 3 2010-06-05 09:59:49 PDT
So, neither WebKit nor shipping versions of Gecko turn nulls into U+FFFD, but HTML5 requires that. Could it be a bug in the spec? What does IE do?
Alexey Proskuryakov
Comment 4 2010-06-05 10:06:39 PDT
For some context: HTML5 offline storage parser also had the requirement to turn nulls into U+FFFD, which was dropped based on our feedback. U+FFFD is generally used to signal decoding errors, which a null definitely doesn't cause.
Adam Barth
Comment 5 2010-06-05 10:19:57 PDT
I believe swallows the nulls, but I haven't tested recently. We should file a bug with the HTML5 WG.
Alexey Proskuryakov
Comment 6 2010-06-05 10:24:38 PDT
I tested in more detail, and it seems to be trickier: - WebKit passes stripNullFromTextNodes.html, as it strips nulls from text node content; - so does IE 7; - Firefox 3.6.3 actually fails the test, and inserts U+FFFD; - but Firefox passes an original reduction for rdar://4702420, which I incorrectly assumed to be the same: <div>\0</div> So, Firefox seems to drop the null if it's the only character in a text node (?!)
Alexey Proskuryakov
Comment 7 2010-06-05 10:26:22 PDT
Created attachment 57967 [details] original reduction
Adam Barth
Comment 8 2010-06-07 11:51:41 PDT
Comment on attachment 57958 [details] Patch Clearing flags on attachment: 57958 Committed r60791: <http://trac.webkit.org/changeset/60791>
Adam Barth
Comment 9 2010-06-07 11:51:48 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.